nav done and chibiOS

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,3 +2,25 @@ site_name: Wind Farm Documentation
 
 theme:
   name: material
+
+
+nav:
+- index.md
+- Getting started with ESP01: esp-01/getting-started.md
+- Dataproducer 01:
+  - dataproducer-1/dataproducer-1.md
+  - dataproducer-1/dht11.md
+  - dataproducer-1/graphical-lcd-backpack.md
+- Dataproducer 02:
+  - dataproducer-2/dataproducer-2.md
+  - dataproducer-2/accelerometer.md
+  - dataproducer-2/liquidcrystali2c.md
+- MQTT:
+  - Example: mqtt/broker.md
+  - mqtt/mqtt.md
+  - mqtt/mcp.md
+- Supervision Station:
+  - Supervision-Station/Supervision-Station.md
+  - Supervision-Station/chibios.md
+  - Supervision-Station/arduino.md
+  - Supervision-Station/esp01.md
