Sprint 1,2,3 documentation done

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -3,7 +3,6 @@ site_name: Wind Farm Documentation
 theme:
   name: material
 
-
 nav:
 - index.md
 - Getting started with ESP01: esp-01/getting-started.md
@@ -24,3 +23,7 @@ nav:
   - Supervision-Station/chibios.md
   - Supervision-Station/arduino.md
   - Supervision-Station/esp01.md
+- Sprints:
+  - sprints/sprint1.md
+  - sprints/sprint2.md
+  - sprints/sprint3.md
